fix error handler

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           id="distance-value"
           step="any"
           name="distance-value"
+          required
         />
         <select id="distance-unit" name="distance-unit">
           <option value="m">метры</option>
