add ratios for conversion

--- a/index.html
+++ b/index.html
@@ -19,18 +19,24 @@
           required
         />
         <select id="distance-unit" name="distance-unit">
-          <option value="m">метры</option>
-          <option value="cm">сантиметры</option>
-          <option value="in">дюймы</option>
-          <option value="ft">футы</option>
+          <option value="m">метры (m)</option>
+          <option value="cm">сантиметры (cm)</option>
+          <option value="in">дюймы (in)</option>
+          <option value="ft">футы (ft)</option>
+          <option value="mm">миллиметры (mm)</option>
+          <option value="yd">ярды (yd)</option>
+          <option value="km">километры (km)</option>
         </select>
 
         <label for="convert-to">Конвертировать в:</label>
         <select id="convert-to" name="convert-to">
-          <option value="m">метры</option>
-          <option value="cm">сантиметры</option>
-          <option value="in">дюймы</option>
-          <option value="ft">футы</option>
+          <option value="m">метры (m)</option>
+          <option value="cm">сантиметры (cm)</option>
+          <option value="in">дюймы (in)</option>
+          <option value="ft">футы (ft)</option>
+          <option value="mm">миллиметры (mm)</option>
+          <option value="yd">ярды (yd)</option>
+          <option value="km">километры (km)</option>
         </select>
 
         <button type="submit">Конвертировать</button>
